[package]
name = "arbitrage_binance_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.8"
warp = "0.3.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.3.4", features = ["rustls-tls"] }
tungstenite = { version = "0.19.0", features = ["rustls-tls"] }
url =  "2.2.2" 